--- a/housing-prices/config_template.json
+++ b/housing-prices/config_template.json
@@ -1,5 +1,6 @@
 {
     "fs.s3a.access.key": "",
     "fs.s3a.secret.key": "",
-    "bucket.name": ""
+    "master": "",
+    "bucket.name": "house-pricing-data"
 }
