--- a/housing-prices/config_template.json
+++ b/housing-prices/config_template.json
@@ -2,5 +2,7 @@
     "fs.s3a.access.key": "",
     "fs.s3a.secret.key": "",
     "master": "",
+    "executor.memory": "2g",
+    "driver.memory": "4g",
     "bucket.name": "house-pricing-data"
 }
